UIP-2589: Add conditional content to SelectionList options
Change-Id: I41aacf7f5d41c87ffd0a8836eedda2d2662d8530

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -628,6 +628,18 @@ label {
     }
 }
 
+.input-checkbox {
+    &__conditional-content {
+        margin-top: $spacing-xs;
+        padding-left: 36px;
+
+        &--stacked {
+            margin-top: 0;
+            margin-bottom: $spacing-sm;
+        }
+    }
+}
+
 .content-measurer {
     position: absolute;
     display: inline-block;
