UIP-2236 changed to word break to break word mixing
Change-Id: Id32dcfeb2af3c372033c3a4839fe43c60958fad2

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2743,7 +2743,7 @@ a {
     vertical-align: bottom;
 
     .label-text {
-        word-break: normal;
+        @include break-word;
     }
     &.input-text,
     &.input-textselect,
