UIP-2606: Connection Status Icon
Change-Id: If6706e7f049d245b9a5fcf488d05dfb615c1d95c

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -183,6 +183,11 @@
     content: $icon-collapse;
   }
 }
+.icon-connection-status {
+  &:before {
+    content: $icon-connection-status; 
+  }
+}
 .icon-curly-braces {
   &:before {
     content: $icon-curly-braces;
@@ -733,3 +738,5 @@
     content: $icon-welcome;
   }
 }
+
+
