--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -32,6 +32,7 @@ $icon-cog: "\67";
 $icon-cog-filled: "\e919";
 $icon-cogs: "\e91c";
 $icon-collapse: "\63";
+$icon-connection-status: "\e931";
 $icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
