UIP-2603 custom domain template update
Change-Id: Icb8f9c665fdd3b517298e5d970653c4bbc79b737

--- a/packages/ui-library/src/css/message-button.scss
+++ b/packages/ui-library/src/css/message-button.scss
@@ -29,6 +29,16 @@ button.message-button {
                 background-color: $color-accent-neutral-10;
             }
         }
+
+        &.primary {
+            .icon-ellipsis {
+                &:before,
+                &:after,
+                span {
+                    background-color: $color-white;
+                }
+            }
+        }
     }
     &--success,
     &--success:hover {
