--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -36,7 +36,8 @@
     &__info {
         display: flex;
     }
-    &__remove-btn {
+    &__remove-btn,
+    &__node-btn {
         margin: 0 0 0 $spacing-lg;
     }
     &__file {
