--- a/packages/ui-library/src/css/layout/_flex-row.scss
+++ b/packages/ui-library/src/css/layout/_flex-row.scss
@@ -20,6 +20,10 @@
         justify-content: space-between;
     }
 
+    &--justify-evenly {
+        justify-content: space-evenly;
+    }
+
     &--align-bottom {
         align-content: flex-end;
         align-items: flex-end;
