UIP-2635 added text description to formlabel
Change-Id: I23be33ac4058494607a91bbc00dde07a264aeef4

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -152,6 +152,10 @@ label {
             margin-left: 5px;
             margin-top: 0;
         }
+        &__description {
+            text-transform: none;
+            padding-top: $spacing-xs;
+        }
     }
 
     &.input-text {
