UIP-2604: Added GlobalMessage for Certificate Expiration template
Change-Id: I1a08660c008b5cf198f5889d40a7fdc6677eab2d

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -80,13 +80,9 @@ a.icon-clear {
             font-size: 42px;
         }
     }
-}
 
-.icon__container {
-    @include inline-flex;
-    align-items: flex-start;
-    .icon__content {
-        padding-left: $spacing-xs;
+    &--clickable {
+        cursor: pointer;
     }
 }
 
