--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -131,6 +131,7 @@ $icon-success-round: "\e92e";
 $icon-support: "\71";
 $icon-tag: "\e924";
 $icon-terminal: "\e928";
+$icon-timer: "\e932";
 $icon-thumb: "\54";
 $icon-twitter: "\e92a";
 $icon-undo: "\6e";
