UIP-2639 Message button should take a disabled prop and be inline-flex
Change-Id: Ifbac2888393ee8c1611e2cfc96b1784020afe26f

--- a/packages/ui-library/src/css/message-button.scss
+++ b/packages/ui-library/src/css/message-button.scss
@@ -1,6 +1,6 @@
 
 button.message-button {
-    @include flexbox;
+    @include inline-flex;
     align-items: center;
     line-height: 1em;
     transition: all 0.1s ease-out;
