UIP-2627 fixed dropdown error state outline.
Change-Id: Ia5cd0715d3bbaf7119776920ac04f08558cc0e5f

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1916,6 +1916,7 @@ input[type=file] {
         }
         .input-container {
             padding-right: $icon-spacing;
+            border-color: $color-input-error;
         }
         .integer-controls {
             right: 33px;
@@ -1969,6 +1970,11 @@ input[type=file] {
         .input-container {
             width: calc(100% - #{$message-input-offset});
         }
+    }
+    &.input-custom-select
+    &.input-text
+    input[type=text] {
+        border-color: $color-input-error;
     }
     &.input-checkbox {
         .icon {
