UIP-2489: MultiColumn DragDrop expands offscreen if one row has a long name with no whitespace
Change-Id: I1a03b2937334a47fd7f6486d00a052ee2b3a5fe0

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -66,10 +66,9 @@
     }
     &__available,
     &__added {
-        @include flexbox-grow(1);
         box-sizing: border-box;
-        flex-basis: 50%;
-        margin: 0 $spacing-lg 0 0;
+        width: 50%;
+        padding: 0 $spacing-lg 0 0;
         .items {
             border-top: 1px solid $color-rabbit-fur;
             border-bottom: 1px solid $color-rabbit-fur;
@@ -254,6 +253,7 @@
     padding: $spacing-sm;
     background-color: $color-white;
     border: 1px solid $color-strong-neutral-70;
+    overflow: hidden;
 
     :first-child > & {
         margin-top: -1px;
@@ -295,16 +295,24 @@
 
     &__labels {
         @include flexbox-grow(1);
+        overflow: hidden;
+        margin: 0 35px 0 0;
     }
 
     &__name {
         color: $color-midnight;
         font-size: 15px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     &__category {
         color: $color-elephant;
         font-size: 14px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
 
