UIP-2659:Multivalue: items with icon and text-only have different height
Change-Id: Id6d81a500a93bab0e8e3b216a658b24529d9be74

--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -171,6 +171,7 @@
     .icon__graphic {
         padding: 0;
         margin-left: 8px;
+        font-size: 12px;
     }
 
     &__popper.popper-container {
