hacky fix to make custom domain look okay until new design is out
Change-Id: Iacff40aec7688457aaac8ef371179fc6eed56f31

--- a/packages/ui-library/src/css/layout/_padding.scss
+++ b/packages/ui-library/src/css/layout/_padding.scss
@@ -104,7 +104,7 @@
         }
 
         &-inline-button-with-input {
-            padding-top: ($spacing-lg + 3);
+            padding-top: ($spacing-lg - 5);
         }
     }
 
