UIP-2664: MessageButton Loading Color
Change-Id: Ibb36a029a32c67a7d5ab60f37bfa06968b6407cf

--- a/packages/ui-library/src/css/message-button.scss
+++ b/packages/ui-library/src/css/message-button.scss
@@ -16,9 +16,9 @@ button.message-button {
     }
 
     &--loading {
-        background: $color-accent-neutral-10;
-        border-color: $color-accent-neutral-10 !important;
-        color: $color-white;
+        background: transparent;
+        border-color: $color-neutral-50 !important;
+        color: $color-accent-neutral-10;
 
         .icon-ellipsis {
             margin: 0 $spacing-md;
@@ -26,11 +26,8 @@ button.message-button {
             &:before,
             &:after,
             span {
-                background-color: $color-white;
+                background-color: $color-accent-neutral-10;
             }
-        }
-        &:hover {
-            color: $color-white !important;
         }
     }
     &--success,
