UIP-2653: Set up HOC to handle hiding focus outlines for mouse users
Change-Id: Ie1e3ca6accf0ea7fa1504287c65ed440d7210b39

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -25,13 +25,33 @@ $default-input-border-radius: 2px;
   but it will still show up on keyboard focus.
 */
 
-.js-focus-visible {
-    .input-radio > input:focus:not(.focus-visible) {
+.button,
+.input-radio > input,
+.input-radio--autofocus,
+.anchor,
+.rocker-button__button,
+.value-input__input,
+.option-list,
+.icon,
+.icon--clickable {
+    &:focus {
         outline-width: 0;
     }
+}
 
-    [class$='--autofocus']:focus:not(.focus-visible) {
-        outline-width: 5px;
+.ui-library-focus-visible {
+    .button,
+    .input-radio > input,
+    .input-radio--autofocus,
+    .anchor,
+    .rocker-button__button,
+    .value-input__input,
+    .option-list,
+    .icon,
+    .icon--clickable {
+        &:focus {
+            outline-width: 5px;
+        }
     }
 }
 
