UIP-2495 fixed issue with flexwidth text field was expanding past parent element in fieldset.
Change-Id: Icbc0027101a0e9e3da4bb1855da2f1eb96551962

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -81,6 +81,7 @@ select {
     }
 }
 
+
 // Tag styling
 input[type=text],
 input[type=password],
@@ -689,6 +690,7 @@ label {
 fieldset {
     margin: 0 0 25px;
     clear: both;
+    min-width: 0;
 
     .input-select {
         margin-right: 0;
