UIP-2662 fixed multivalues max-width inside a detials tooltip
Change-Id: I69a1612c0add7e03a03e1e3b12d36f08c6b63675

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -153,6 +153,10 @@
         .link-dropdown-list & {
             padding: 0;
         }
+
+        .input-multivalues {
+            max-width: 100%;
+        }
     }
 
     .details-close {
