UIP-2678 Documentation page for validation standards
Change-Id: I8d8e9dde0f83c6c06746544fd1c9330ab6ff20a6

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2226,6 +2226,7 @@ input[type=file] {
         }
         .input-message__text {
             background-color: $color;
+            text-shadow: 0 0 3px rgba($color-black, 0.6);
         }
         &.input-text {
             input[type=text],
