UIP-2665 fixed checkbox inline issue with text not aligning properly and added word-break mixin
Change-Id: I0475b12225f0ce47d550b8ed116661f875a300ac

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -446,6 +446,7 @@ label {
             text-transform: none;
 
             .label-text {
+                @include break-word;
                 display: inline-block;
                 text-transform: none;
                 font-size: 14px;
@@ -2430,7 +2431,8 @@ input[type=file] {
             vertical-align: bottom;
             line-height: 27px;
             .icon {
-                bottom: 3px;
+                top: 0;
+                bottom: unset;
             }
         }
     }
