UIP-2694 fixed focus outline on integer field arrows
Change-Id: I95abf66222220cd04495507022eddb93e6dd9595

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -33,7 +33,9 @@ $default-input-border-radius: 2px;
 .value-input__input,
 .option-list,
 .icon,
-.icon--clickable {
+.icon--clickable,
+.integer-down,
+.integer-up {
     &:focus {
         outline-width: 0;
     }
@@ -48,7 +50,9 @@ $default-input-border-radius: 2px;
     .value-input__input,
     .option-list,
     .icon,
-    .icon--clickable {
+    .icon--clickable,
+    .integer-down,
+    .integer-up {
         &:focus {
             outline-width: 5px;
         }
