UIP-2701 BodyTitle component for Modal
Change-Id: I0dc6de7c51f62b28f08420407e0ce990d469d11a

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -169,7 +169,8 @@
         .modal-content {
             width: $modal-width;
         }
-        .modal-title {
+        .modal-title,
+        .body-title {
             font-size: 20px;
             margin: 0 0 15px;
         }
@@ -228,7 +229,8 @@
 
             @include border-radius(0 0 $modal-radius $modal-radius);
 
-            .title {
+            .title,
+            .body-title {
                 color: $color-warning-text;
                 text-align: center;
                 font-weight: 400;
