UIP-2697: Fixed FileUpload so that input doesn't cover title
Change-Id: I4eb2897826a3b6cdf4c062df5d9ac1e35e5688ef

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1119,6 +1119,10 @@ input[type=file] {
     display: inline-block;
     width: 100%;
 
+    &__image-container {
+        position: relative;
+    }
+
     &.no-label {
         margin-top: 0;
     }
