UIP-2704 fixed focus outline getting applied to places it shouldnt be
Change-Id: Iebff6cbcd8eeb31d7a5cb2b77d08aa74b380aa19

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -35,7 +35,10 @@ $default-input-border-radius: 2px;
 .icon,
 .icon--clickable,
 .integer-down,
-.integer-up {
+.integer-up,
+.view-toggle,
+.delete-btn,
+.button-menu__button, {
     &:focus {
         outline-width: 0;
     }
@@ -52,7 +55,10 @@ $default-input-border-radius: 2px;
     .icon,
     .icon--clickable,
     .integer-down,
-    .integer-up {
+    .integer-up,
+    .view-toggle,
+    .delete-btn,
+    .button-menu__button, {
         &:focus {
             outline-width: 5px;
         }
