UIP-2723: Set up inline Icon to accept iconSize prop
Change-Id: I5edb63f6549e0b5381f4073525797665acf359ee

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -81,6 +81,22 @@ a .icon-clear {
         }
     }
 
+    &--size-sm {
+        font-size: 14px;
+    }
+    &--size-md {
+        font-size: 21px;
+    }
+    &--size-lg {
+        font-size: 28px;
+    }
+    &--size-xl {
+        font-size: 35px;
+    }
+    &--size-xxl {
+        font-size: 42px;
+    }
+
     &--clickable {
         cursor: pointer;
     }
