UIP-2739: Create Fieldset Component
Change-Id: Iec5c9fa5adea14d7f204f55360fca942a60f2fc5

--- a/packages/ui-library/src/css/forms/_file-drop.scss
+++ b/packages/ui-library/src/css/forms/_file-drop.scss
@@ -43,7 +43,7 @@
 
     label {
         position: relative;
-        display: inline-block;
+        display: none;
         vertical-align: middle;
         top: auto;
         bottom: auto;
