--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -18,6 +18,7 @@
 @import 'layout/stretch-content';
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
+@import 'layout/field-set';
 @import 'layout/padding';
 @import 'layout/mapped-attributes';
 @import 'layout/chip';
