UIP-2758 Provide remove icon on row builder
Change-Id: If3438d1f3ab445b8ccdf46746783efe39df472d5

--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -44,6 +44,18 @@
         }
     }
 
+    &__remove-icon {
+        color: $color-accent-neutral-30;
+    }
+    &__row:hover &__remove-icon,
+    &__row:focus-within &__remove-icon {
+        color: $color-strong-neutral-10;
+
+        &:hover {
+            color: $color-active-blue;
+        }
+    }
+
     &--form {
         &__row {
             align-items: flex-end;
