UIP-2763 Redefined neutral 95 for the purposes of end-user
Change-Id: Ibc648dfdc46825367c78d495310766e71600709c

--- a/packages/ui-library/hosting/assets/css/landing.scss
+++ b/packages/ui-library/hosting/assets/css/landing.scss
@@ -2,7 +2,7 @@
 @import '../../../src/css/spacing.scss';
 
 body {
-    background: $color-neutral-95;
+    background: $color-strong-neutral-90;
 }
 
 .main {
