--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -198,6 +198,6 @@
 }
 
 .modifier_light-inputs .input-multivalues .entries .entry {
-    border-color: $color-neutral-95;
-    background-color: $color-neutral-95;
+    border-color: $color-accent-neutral-90;
+    background-color: $color-accent-neutral-90;
 }
