--- a/packages/ui-library/src/css/general/_formatted-content.scss
+++ b/packages/ui-library/src/css/general/_formatted-content.scss
@@ -122,7 +122,7 @@
 
     :not(pre) > code,
     pre {
-        background: $color-neutral-95;
+        background: $color-strong-neutral-90;
     }
 
     /* Inline code */
