UIP-2748 Fixed color for AccessoriesLineChart HelpHint
Change-Id: Ic26671f6b9fcc4255fca924b92ae876ec5e59a92

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -1251,6 +1251,14 @@ input.ordering-controls__input {
     @include flexbox;
     align-items: center;
     justify-content: space-between;
+
+    .help-tooltip .tooltip-text a {
+        text-decoration: none;
+    }
+
+    .help-tooltip--light .tooltip-text a {
+        color: $color-active-blue;
+    }
 }
 
 .accessories-line-chart__chart-wrapper {
