--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -19,6 +19,7 @@
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
 @import 'layout/field-set';
+@import 'layout/file-details';
 @import 'layout/padding';
 @import 'layout/mapped-attributes';
 @import 'layout/chip';
