--- a/packages/ui-library/src/css/layout/_field-set.scss
+++ b/packages/ui-library/src/css/layout/_field-set.scss
@@ -14,4 +14,9 @@
         padding: 0 $spacing-sm;
         @include text-parent-label;
     }
+
+    & .input-file__selected-content {
+        margin: $spacing-sm;
+    }
+
 }
