UIP-2757 added prop to make the max-width wider for details tooltip
Change-Id: Ida05edc6eae167979f73ee769d3bc7972d8c735b

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -74,6 +74,10 @@
     max-width: $popup-width;
     word-break: break-word;
 
+    &--large {
+        max-width: 70%;
+    }
+
     .loader {
         position: relative;
         display: inline-block;
