UIP-2716: Fix endUser tabs
Change-Id: Ia51ddf5fdc5c90e4b8d4c4be3ae3ad48cfcf7f10

--- a/packages/ui-library/src/css/tabs.scss
+++ b/packages/ui-library/src/css/tabs.scss
@@ -9,7 +9,7 @@
         margin-bottom: 28px;
 
         li {
-            display: inline;
+            display: inline-block;
             margin-right: 46px;
             padding-bottom: 8px;
             position: relative;
@@ -17,6 +17,7 @@
             color: $color-rhino;
             cursor: pointer;
             font-size: 13px;
+            margin-bottom: 6px;
 
             a {
                 color: $color-rhino;
