--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -75,6 +75,13 @@
         display: inline-block;
         margin: 0;
     }
+
+    &--overflow-ellipsis {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+    }
 }
 
 .textblock {
