UIP-2773 Use transform scale on hover of accessories line chart so large text doesn't wrap
Change-Id: I4973152367cca44c3c07f02fe42b6d5d3a6219a6

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -1272,15 +1272,11 @@ input.ordering-controls__input {
     &:hover {
         cursor: pointer;
         background-color: $color-accent-neutral-70;
-        .accessories-line-chart__chart {
-            width: 55px;
-            height: 20px;
-        }
-        .accessories-line-chart__chart-label {
-            font-size: 11px;
-        }
+        .accessories-line-chart__chart,
+        .accessories-line-chart__chart-label,
         .accessories-line-chart__trend {
-            font-size: 12px;
+            transform: scale(1.1);
+            transition: transform 0.2s;
         }
     }
     &:before {
